--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "back",
   "version": "1.0.0",
@@ -27,6 +26,7 @@
     "mongoose": "^8.13.2",
     "multer": "^2.0.0",
     "nodemailer": "^6.10.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^11.1.0"
   }
 }
